# LLMs-from-scratch

./: .gitignore  AGENTS.md  ANALYSIS_CN.md  LLMs-from-scratch.epub  README.md  README_CN.md  SUMMARY.md  book.json  troubleshooting_CN.md  xquant-learning.epub
projects/gbcost-insurance-ml/: AGENTS.md  README.md  config.yaml  pyproject.toml  requirements-ml.txt
projects/gbcost-insurance-ml/data/doris/: c001_ghb_poicy_clm_duty_d.csv
projects/gbcost-insurance-ml/experiments/: experiment_index.json
projects/gbcost-insurance-ml/experiments/chunked_full_362w/: config_snapshot.json  feature_importance.csv  metrics.json
projects/gbcost-insurance-ml/experiments/chunked_v2_50r/: config_snapshot.json  feature_importance.csv  metrics.json
projects/gbcost-insurance-ml/experiments/full_train_25pct/: config_snapshot.json  feature_importance.csv  metrics.json  model_params.json
projects/gbcost-insurance-ml/experiments/full_train_v2/: config_snapshot.json  feature_importance.csv  metrics.json
projects/gbcost-insurance-ml/ml/: __init__.py  config_ml.yaml
projects/gbcost-insurance-ml/ml/data/: __init__.py  feature_store.py  label_enricher.py  loader.py  policy_aggregator.py  risk_scorer.py  sequence_builder.py  split.py
projects/gbcost-insurance-ml/ml/evaluate/: __init__.py  (+4 more)
projects/gbcost-insurance-ml/models/: bucket_correction.json  calibrator.json  category_mappings.json  feature_schema.json  l1a_amount.txt  l1a_amount_meta.json  l1a_p05.txt  l1b_classifier.txt  l1b_classifier_meta.json  l2_policy.txt  l2_policy_meta.json  latest  lstm_policy.pt  model_registry.json
(+491 files in other folders)
